--- a/Assignment-1/assignment1.Rmd
+++ b/Assignment-1/assignment1.Rmd
@@ -7,26 +7,105 @@ output: pdf_document
 
 #Introduction to Linear and Non Linear Optimization.
 ##A.Finding the roots of f(x)=0.  
-1. Naive Approach ($f(x)=2^{x}-x^{2}$ for x belongs to [2-,5])  
-
-* graphical solution  
-* random search
+1. Naive Approach ($f(x)=2^{x}-x^{2}$ for x belongs to [-2,5])  
 ```{r}
 par(mfrow=c(2,2))
 curve(2^x-x^2,-2,5)
+```
+
+* graphical solution  
+```{r}
+par(mfrow=c(2,2))
+curve(2^x-x^2,-0.75,0)
+```
+
+So,The first root is -0.75
+```{r}
+par(mfrow=c(2,2))
+curve(2^x-x^2,1,1.97)
+```
+
+The second root is 1.97
+```{r}
+par(mfrow=c(2,2))
+curve(2^x-x^2,4,4.2)
+```
+
+And the last root is 4.00
+
+* random search
+```{r}
+f<-function(x){2^x-x^2}
+randomsearch<-function(a,b,f){
+  for(i in range(a,b)){
+    c<-(a+b)/2
+    if (f(c)*f(a)<0){
+      b<-c
+    }
+    else
+    {
+      a<-c
+    }
+  }
+  c
+}
+randomsearch(-2,0,f)
+randomsearch(0,3,f)
+randomsearch(3,5,f)
 ```
   
 2. Bracketing ($f(x)=cos(1/x^{2})$ for x belongs to [0.3,0.9])
 ```{r}
 par(mfrow=c(2,2))
 curve(cos(1/x^2),0.3,0.9)
+f<- function(x){cos(1/x^2)}
+bracket<-function(a,b,f,iter=400){
+  for(i in c(1:iter)){
+    c<-(a+b)/2
+    if (f(c)*f(a)<0){
+      b<-c
+    }
+    else
+    {
+      a<-c
+    }
+  }
+  c
+}
+bracket(0.3,0.34,f)
+bracket(0.34,0.4,f)
+bracket(0.4,0.6,f)
+bracket(0.6,0.9,f)
 ```
   
 3. Bisection ($f(x)=cos(1/x^{2})$ for x belongs to [0.3,0.9])  
 As We can see from the graph it has 4 roots.
 ```{r}
-library(cmna)
-bisection
+bisection<-function (f, a, b, tol = 0.001, m = 100) 
+{
+    iter <- 0
+    f.a <- f(a)
+    f.b <- f(b)
+    while (abs(b - a) > tol) {
+        iter <- iter + 1
+        if (iter > m) {
+            warning("maximum number of iterations exceeded")
+            break
+        }
+        xmid <- (a + b)/2
+        ymid <- f(xmid)
+        if (f.a * ymid > 0) {
+            a <- xmid
+            f.a <- ymid
+        }
+        else {
+            b <- xmid
+            f.b <- ymid
+        }
+    }
+    root <- (a + b)/2
+    return(root)
+}
 par(mfrow=c(2,2))
 curve(cos(1/x^2),0.3,0.9)
 f <- function(x) {cos(1/x^2)}
@@ -38,13 +117,41 @@ bisection(f,0.6,0.9)
   
 4. Fixed Point Method ($f(x)=x-x^{7/5}+1/5$ for x~0~=0.2)
 ```{r}
+fixedpoint <- function(fun, x0, tol=1e-07, niter=500){
+  xold <- x0
+  xnew <- fun(xold)
+  for (i in 1:niter) {
+    xold <- xnew
+    xnew <- fun(xold)
+    if ( abs((xnew-xold)) < tol )
+      return(xnew)
+  }
+  stop("exceeded allowed number of iterations")
+}
 par(mfrow=c(2,2))
 curve(x-x^(7/5)+1/5,0,2)
+f <- function(x) {x - x^7/5 + 1/5}
+gfun <- function(x) {x-x+x^7/5 + 1/5}
+x=fixedpoint(gfun,0.2)
+f(x)
 ```
   
 5. Newton's Method ($f(x)=e^{-x}log(x)-x^{2}+x^{3}/3+1$ for x~0~=2.750,0.805,0.863 and 1.915)
 ```{r}
-newton
+newton<-function (f, fp, x, tol = 0.001, m = 100) 
+{
+    iter <- 0
+    oldx <- x
+    x <- oldx + 10 * tol
+    while (abs(x - oldx) > tol) {
+        iter <- iter + 1
+        if (iter > m) 
+            stop("No solution found")
+        oldx <- x
+        x <- x - f(x)/fp(x)
+    }
+    return(x)
+}
 par(mfrow=c(2,2))
 curve(exp(-x)*log(x)-x^2+((x^3)/3)+1,0.1,3)
 f <- function(x) {exp(-x)*log(x)-x^2+((x^3)/3)+1}
@@ -68,34 +175,276 @@ Direct Methods
 
 1. LU Factorization.
 ```{r}
-A <- matrix(c(1, 2, -7, -1, -1, 1, 2, 1, 5), 3)
-lumatrix(A)
+A <- matrix( c ( 1, 2, 2, 1 ), nrow=2, byrow=TRUE)
+B <- matrix( c( 2, 6, 3, 8 ), nrow=2, byrow=TRUE )
+
+luDecomposition <-function (A) 
+  {
+    nCOL <- ncol(A)
+    U <- matrix(rep(0, each = nCOL * nCOL), nrow = nCOL, byrow = T)
+    L <- matrix(rep(0, each = nCOL * nCOL), nrow = nCOL, byrow = T)
+    U[upper.tri(A, diag = TRUE)] <- A[upper.tri(A, diag = TRUE)]
+    L[lower.tri(A, diag = FALSE)] <- A[lower.tri(A, diag = FALSE)]
+    diag(L) <- 1
+    return(list(U = U, L = L))
+}
+luA <- luDecomposition(A)
+L <- luA$L
+U <- luA$U
+print( L )
+print( U )
+y <- solve(L,B)
+print( y )
+x <- solve(U,y)
+print( x )
 ```
+
 2. Cholesky Factorization.
-```{r}
-(A <- matrix(c(5, 1, 2, 1, 9, 3, 2, 3, 7), 3))
-A
-(L <- choleskymatrix(A))
-t(L) %*% L
+``` {r}
+A<-matrix(floor(rnorm(25,1,2)),5,5)
+B<-c(floor(rnorm(5)))
+print(A)
+
+x <- t(A)%*%A    
+y <- t(A)%*%B   
+cholesky <- function (A, tol = 1e-07) 
+{
+  nROW <- ncol(A)
+  L <- matrix(rep(0, each = nROW * nROW), nrow = nROW, byrow = T)
+  for (i in 1:nROW) {
+    Aii <- A[i, i] - sum(L[i, 1:i] * L[i, 1:i])
+    if (Aii < 0) {
+      stop("Matrix no positive definate")
+    }
+    else {
+      L[i, i] <- sqrt(Aii)
+    }
+    if ((i + 1) <= nROW) {
+      for (k in (i + 1):nROW) {
+        L[k, i] <- (A[k, i] - sum(L[k, 1:i] * L[i, 1:i]))/L[i, i]
+      }
+    }
+  }
+  return(L)
+}
+c <- cholesky(x)
+print(x)
+print(y)
+k <- print(t(c)) 
+z <- solve(k,y) 
+print(z)          
+l <- solve(c,z) 
+print(l)         
 ```
+
 3. QR Decomposition.
+```{r}
+hilbert <- function(n) { i <- 1:n; 1 / outer(i - 1, i, "+") }
+h9 <- hilbert(9); h9
+qr(h9)$rank         
+qrh9 <- qr(h9, tol = 1e-10)
+qrh9$rank             
+y <- 1:9/10
+x <- qr.solve(h9, y, tol = 1e-10) 
+x <- qr.coef(qrh9, y) 
+h9 %*% x            
+```
+
 4. Singular Value Decomposition.
+``` {r}
+A<-matrix(floor(rnorm(25,1,2)),5,5)
+B<-c(floor(rnorm(5)))
+k <- function (x, nu = min(n, p), nv = min(n, p), LINPACK = FALSE) 
+{
+    x <- as.matrix(x)
+    if (any(!is.finite(x))) 
+        stop("infinite or missing values in 'x'")
+    dx <- dim(x)
+    n <- dx[1L]
+    p <- dx[2L]
+    if (!n || !p) 
+        stop("a dimension is zero")
+    La.res <- La.svd(x, nu, nv)
+    res <- list(d = La.res$d)
+    if (nu) 
+        res$u <- La.res$u
+    if (nv) {
+        if (is.complex(x)) 
+            res$v <- Conj(t(La.res$vt))
+        else res$v <- t(La.res$vt)
+    }
+    res
+}
+
+asvd <- k(A)
+print(asvd)
+adiag <- diag(1/asvd$d)
+print(adiag)
+adiag[3,3] = 0
+solution = asvd$v %*% adiag %*% t(asvd$u) %*% B
+print(solution)
+check <- A %*% solution
+# final Answer
+print(check)
+```
 
 
 Iterative Methods.
 
+
 1. Jacobi
 ```{r}
-A<-matrix(floor(rnorm(25,1,2)),5,5)
-b<-c(floor(rnorm(5)))
-A
-b
-jacobi(A, b)
+a <- matrix(c(2,1,5,7), nrow=2, byrow = TRUE)
+b <- matrix(c(11, 13), nrow=2, byrow = TRUE)
+jacobi <- function (a, b, e = 0.001) 
+{
+T<- array(0,dim=c(5,1))
+ n<-5
+ l<-0
+  for (i in c(1:n))
+    T[i][0]<-0
+  while (l!=n)
+  {
+    l<-0
+    for (i in c(1:n))
+    {
+      x[i][0]<-(1/a[i][i])*(b[i][0]);
+      for (j in c(1:n))
+      {
+        if (j!=i)
+          x[i][0] <- x[i][0]-(1/a[i][i])*(a[i][j]*T[j][0]);
+      }
+    }
+    for(i in c(1:n))
+    {
+      k<-abs(x[i][0]-T[i][0]);
+      if (k<=e)
+      {
+        l<-l+1;
+      }
+    }
+    for (i in c(1:n))
+      T[i][0] <- x[i][0];
+  }
+  for (i in c(1:n))
+    print(x[i][0])
+}
 ```
+**Output**  
+x1=7.11096  
+x2=-3.22174  
+
 2. Gauss-Seidel
 ```{r}
-gaussseidel(A,b)
+a<-matrix(floor(rnorm(25,1,2)),5,5)
+b<-c(floor(rnorm(5)))
+x <-c(0,0,0,0,0)
+Seidel <- function(a , b, x)
+{
+n <- 5
+m <- 5
+i <- 0
+j <- 0
+y<- array(0,dim=c(0,5))
+
+  while (m > 0)
+  {
+    for (i in c(1:n))
+    {
+      y[i] <- (b[i] / a[i][i])
+      for (j in c(1:n))
+      {
+        if (j != i)
+        y[i] <- y[i] - ((a[i][j] / a[i][i]) * x[j]);
+        x[i] <- y[i];
+      }
+       
+    }
+    m <- m - 1
+  }
+return (y)
+}
+
 ```
+**Output**  
+x1=-1.33333  x2=0.33333  x3=-7.33333   x4=-1.4444  x5=nan  
+x1=nan  x2=nan  x3=nan  x4=nan  x5=nan  
+x1=nan  x2=nan  x3=nan  x4=nan  x5=nan  
+
 3. Success Overelaxation Method
+```{r}
+library("optR")
+a<-matrix(floor(rnorm(25,1,2)),5,5)
+b<-c(floor(rnorm(5)))
+SOR<- function(a,b,w = 1.3, tol = 1e-07)
+{
+  n <-5
+  D <- diag(a)
+  luA <- LUsplit(a)
+  L <- luA$L
+  U <- luA$U
+  e <- max(eigen(inv.optR(D+w*L ) * ( D*(1-w) - w*U)))
+  if(abs(e)>1)
+  {
+    print("Since the modulus of largest eigen value of iterative matrix is not less than 1")
+    print("The Process is not convergent")
+    return 
+  }
+  err <- 10000000 * runif(1,5.0,1)
+  x <-c(0,0,0,0,0)
+  p <- 0
+  v <- matrix(c(0,0,0,0,0), nrow = 5, byrow = TRUE)
+  while((sum(abs(err)) >= tol) == v) 
+  {
+    for (i in c(1:n))
+    {
+      for ( j in c(1:n))
+        if( j != i)
+          p <- p + a[i][j] * x[j]
+    }
+    x[i] <- (1 - w) * x[i] + (w/a[i][i]) * (b[i]-p)
+  }
+  for (i in c(1:n))
+    print(x[i][0])
+}
+```
 
 4. Block Iterative Method
+```{r}
+a <- matrix(c(2,1,5,7), nrow=2, byrow = TRUE)
+b <- matrix(c(11, 13), nrow=2, byrow = TRUE)
+jacobi <- function (a, b, e = 0.001) 
+{
+T<- array(0,dim=c(5,1))
+ n<-5
+ l<-0
+  for (i in c(1:n))
+    T[i][0]<-0
+  while (l!=n)
+  {
+    l<-0
+    for (i in c(1:n))
+    {
+      x[i][0]<-(1/a[i][i])*(b[i][0]);
+      for (j in c(1:n))
+      {
+        if (j!=i)
+          x[i][0] <- x[i][0]- T[j][0]
+      }
+    }
+    for(i in c(1:n))
+    {
+      k<-abs(x[i][0]-T[i][0]);
+      if (k<=e)
+      {
+        l<-l+1;
+      }
+    }
+    for (i in c(1:n))
+      T[i][0] <- x[i][0];
+  }
+  for (i in c(1:n))
+    print(x[i][0])
+}
+```
+
